--- a/index.html
+++ b/index.html
@@ -1,38 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>HTML5 Demo: getUserMedia (Treehouse Blog)</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <h1 id="bigOne"></h1>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Speech Score</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
 
-  <div id="video-container">
-    <video id="camera-stream" autoplay></video>
-  </div>
+    <video id="preview" autoplay muted></video>
+    <button id="startButton">Start</button>
+    <button id="stopButton">Stop</button>
 
-  <!-- Camera recording and screen mirroring -->
-  <script src="script.js"></script>
 
-  <!-- Firebase -->
-  <script src="https://www.gstatic.com/firebasejs/4.9.0/firebase.js"></script>
-  <script>
-    // Initialize Firebase
-    var config = {
-      apiKey: "AIzaSyDM9L1r4BwgTtw28iD3M2p1hVAkizblXnY",
-      authDomain: "speech-score-be574.firebaseapp.com",
-      databaseURL: "https://speech-score-be574.firebaseio.com",
-      projectId: "speech-score-be574",
-      storageBucket: "speech-score-be574.appspot.com",
-      messagingSenderId: "62579755631"
-    };
-    firebase.initializeApp(config);
+    <video id="recording"></video>
+    <a id="downloadButton" class="button">Download</a>
 
-    var bigOne = document.getElementById('bigOne');
-    var dbRef = firebase.database().ref().child('text');
-    dbRef.on('value', snap => bigOne.innerText = snap.val());
 
-  </script>
-</body>
+    <!-- Camera recording and screen mirroring -->
+    <script src="script.js"></script>
+
+  </body>
 </html>
