--- a/index.html
+++ b/index.html
@@ -19,5 +19,20 @@
     <!-- Camera recording and screen mirroring -->
     <script src="script.js"></script>
 
+    
+    <script src="https://www.gstatic.com/firebasejs/4.9.0/firebase.js"></script>
+    <script>
+      // Initialize Firebase
+      var config = {
+        apiKey: "AIzaSyDM9L1r4BwgTtw28iD3M2p1hVAkizblXnY",
+        authDomain: "speech-score-be574.firebaseapp.com",
+        databaseURL: "https://speech-score-be574.firebaseio.com",
+        projectId: "speech-score-be574",
+        storageBucket: "speech-score-be574.appspot.com",
+        messagingSenderId: "62579755631"
+      };
+      firebase.initializeApp(config);
+    </script>
+
   </body>
 </html>
