--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
     <meta charset="utf-8">
     <title>Speech Score</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://use.fontawesome.com/bbae49e875.js"></script>
   </head>
   <body>
 
-    <video id="preview" autoplay muted></video>
-    <button id="startButton">Start</button>
-    <button id="stopButton">Stop</button>
+    <div class="left">
+      <video id="preview" autoplay muted>
+      </video>
+      <i class="fa fa-play-circle-o fa-5x" aria-hidden="true" id="startButton"></i>
+      <i class="fa fa-stop-circle-o fa-5x" aria-hidden="true" id="stopButton"></i>
+    </div>
 
+    <div class="right">
+      
+    </div>
 
     <video id="recording"></video>
     <a id="downloadButton" class="button">Download</a>
@@ -19,7 +26,8 @@
     <!-- Camera recording and screen mirroring -->
     <script src="script.js"></script>
 
-    
+
+    <!-- Firebase -->
     <script src="https://www.gstatic.com/firebasejs/4.9.0/firebase.js"></script>
     <script>
       // Initialize Firebase
@@ -32,6 +40,7 @@
         messagingSenderId: "62579755631"
       };
       firebase.initializeApp(config);
+
     </script>
 
   </body>
