--- a/index.html
+++ b/index.html
@@ -4,20 +4,37 @@
     <meta charset="utf-8">
     <title>Speech Score</title>
     <link rel="stylesheet" href="style.css">
+    <!-- fusion charts --> 
+    <script src="js/fusioncharts.js"></script>
+    <script src="js/fusioncharts.charts.js"></script>
+
+    <!-- firebase -->
+    <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase-database.js"></script>
+
+    <script src="js/app.js"></script>
+    <script src="js/app_data.js"></script>
   </head>
   <body>
+    <div id="video">
+      <video id="preview" autoplay muted></video>
+      <button id="startButton">Start</button>
+      <button id="stopButton">Stop</button>
 
-    <video id="preview" autoplay muted></video>
-    <button id="startButton">Start</button>
-    <button id="stopButton">Stop</button>
 
+      <video id="recording"></video>
+      <a id="downloadButton" class="button">Download</a>
+    </div>
+    <div id="charts">
+      <div id="chart-container">
+      </div>
+    </div>
 
-    <video id="recording"></video>
-    <a id="downloadButton" class="button">Download</a>
+    
 
 
     <!-- Camera recording and screen mirroring -->
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 
   </body>
 </html>
