--- a/index.html
+++ b/index.html
@@ -52,19 +52,8 @@
 
     <!-- Firebase -->
     <script src="https://www.gstatic.com/firebasejs/4.9.0/firebase.js"></script>
-    <script>
-      // Initialize Firebase
-      var config = {
-        apiKey: "AIzaSyDM9L1r4BwgTtw28iD3M2p1hVAkizblXnY",
-        authDomain: "speech-score-be574.firebaseapp.com",
-        databaseURL: "https://speech-score-be574.firebaseio.com",
-        projectId: "speech-score-be574",
-        storageBucket: "speech-score-be574.appspot.com",
-        messagingSenderId: "62579755631"
-      };
-      firebase.initializeApp(config);
-
-    </script>
+    <script src="js/init_firebase.js"></script>
+    <script src="js/words_per_min.js"></script>
 
   </body>
 </html>
