add script to index.html

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 
     <!-- Camera recording and screen mirroring -->
     <script src="script.js"></script>
-
+    <!-- Audio recording -->
+    <script src="//www.WebRTC-Experiment.com/RecordRTC.js"></script>
 
 
   </body>
