--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="utf-8">
     <title>Speech Score</title>
     <link rel="stylesheet" href="style.css">
+    <script src="jquery-3.2.0.min.js"></script>
+
+
+ <!-- fusion charts --> 
+      <script src="https://static.fusioncharts.com/code/latest/fusioncharts.js"></script>
+    <!-- <script src="js/fusioncharts.js"></script> -->
+    <script src="js/fusioncharts.charts.js"></script>
+
     <script src="https://use.fontawesome.com/bbae49e875.js"></script>
-    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
   </head>
   <body>
 
@@ -34,13 +41,11 @@
  
     </div>
 
-    <script src="jquery-3.2.0.min.js"></script>
 
         <!-- Camera recording and screen mirroring -->
     <video id="recording"></video>
     <a id="downloadButton" class="button">Download</a>
 
-    <script src="js/script.js"></script>
     <script src="js/text.js"></script>
 
     <!-- Firebase -->
