--- a/index.html
+++ b/index.html
@@ -6,12 +6,6 @@
     <link rel="stylesheet" href="style.css">
     <script src="jquery-3.2.0.min.js"></script>
 
-
- <!-- fusion charts --> 
-      <script src="https://static.fusioncharts.com/code/latest/fusioncharts.js"></script>
-    <!-- <script src="js/fusioncharts.js"></script> -->
-    <script src="js/fusioncharts.charts.js"></script>
-
     <script src="https://use.fontawesome.com/bbae49e875.js"></script>
   </head>
   <body>
@@ -38,7 +32,6 @@
       </div>
     </div>
 
- 
     </div>
 
 
@@ -46,18 +39,22 @@
     <video id="recording"></video>
     <a id="downloadButton" class="button">Download</a>
 
-    <script src="js/text.js"></script>
 
     <!-- Firebase -->
     <script src="https://www.gstatic.com/firebasejs/4.9.0/firebase.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.9.0/firebase-storage.js"></script>
     <script src="js/init_firebase.js"></script>
-    <script src="js/words_per_min.js"></script>
 
     <!-- Camera recording and screen mirroring -->
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 
+    <!-- fusion charts --> 
+    <script src="https://static.fusioncharts.com/code/latest/fusioncharts.js"></script>
+    <!-- <script src="js/fusioncharts.js"></script> -->
+    <script src="js/fusioncharts.charts.js"></script>
+    <script src="js/words_per_min.js"></script>
 
+    <script src="js/text.js"></script>
 
   </body>
 </html>
