--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="jquery-3.2.0.min.js"></script>
 
     <script src="https://use.fontawesome.com/bbae49e875.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/wavesurfer.js/1.4.0/wavesurfer.min.js"></script>
   </head>
   <body>
 
