black screen with play button

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
   <body>
 
     <div class="left">
-      <video id="preview" autoplay muted>
+      <video id="preview" autoplay muted width=500>
       </video>
       <i class="fa fa-play-circle-o fa-5x" aria-hidden="true" id="startButton"></i>
       <i class="fa fa-stop-circle-o fa-5x" aria-hidden="true" id="stopButton"></i>
     </div>
-
+<!--
     <div class="right">
       <div id="chart-container">
       </div>
@@ -30,7 +30,7 @@
        <div id="input">
          <ul id="myUL">
          </ul>
-      </div>
+      </div> -->
     </div>
 
     </div>
@@ -39,6 +39,7 @@
         <!-- Camera recording and screen mirroring -->
     <video id="recording"></video>
     <a id="downloadButton" class="button">Download</a>
+    <a id="audioDownloadButton" class="button">Download</a>
 
 
     <!-- Firebase -->
