changed speech stats

--- a/summary.html
+++ b/summary.html
@@ -43,14 +43,14 @@
           <p class="intro-text" style="font-size: 22px; font-family: Lato">View your personalized results here!</p>
 
           <div class="col-lg-4">
-            <div id="chart4"></div>
+            <div class="inverted" id="chart4"></div>
             <script>
             var chart = c3.generate({
                 bindto: '#chart4',
                 data: {
                     columns: [
-                        ['data1', 300, 350, 300, 0, 0, 0],
-                        ['data2', 130, 100, 140, 200, 150, 50]
+                        ['data1', 244, 350, 300, 80, 100, 124],
+                        ['data2', 130, 100, 140, 75, 150, 50]
                     ],
                     types: {
                         data1: 'area-spline',
@@ -74,10 +74,10 @@
                 bindto: '#chart3',
                 data: {
                     columns: [
-                        ['data1', 30],
-                        ['data2', 10],
-                        ['data3', 24],
-                        ['data4', 43]
+                        ['data1', 3],
+                        ['data2', 8],
+                        ['data3', 2],
+                        ['data4', 4]
                     ],
                     type: 'bar'
                   },
