--- a/index.html
+++ b/index.html
@@ -26,11 +26,22 @@
     </div>
     <h2>
       <i class="fa fa-play-circle-o fa-5x" aria-hidden="true" id="startButton"></i>
+      <a href="./summary.html">
       <i class="fa fa-stop-circle-o fa-5x" aria-hidden="true" id="stopButton"></i>
+      </a>
     </h2>
 
 
+    <h3 style="position: absolute; font-size: 30px; bottom: 50px; left: 50px; font-family: Lato; color: white" id="score">Score</h3>
+
+
+
     <a href="index.html"><i class="fa fa-podcast fa-3x" aria-hidden="true" id="logo"></i></a>
+
+    <!-- <h2 style="margin:5px">Input text</h2>
+      <input type="text" id="myInput" placeholder="Title...">
+      <span onclick="newElement()" class="addBtn">Enter</span>
+ -->
 <!--
     <div class="right">
       <div id="chart-container">
