--- a/summary.html
+++ b/summary.html
@@ -26,6 +26,31 @@
     <link rel="shortcut icon" type="image/png" href="./img/potion.png"/>
 
     <link rel="stylesheet" href="c3.css">
+    <style>
+      ul {
+  list-style-type: none;
+  margin: 0;
+  text-align: right;
+  margin-right: 30px;
+  font-family: 'Lato', sans-serif;
+  font-size: 1.2em;
+}
+li {
+    display: inline-block;
+    margin-top: 30px;
+}
+li a {
+  text-decoration: none;
+  color: white;
+  padding: 20px 10px;
+}
+#logo {
+  position: absolute;
+  top: 30px;
+  left: 50px;
+  color: white;
+}
+    </style>
     <script src="jquery-3.2.0.min.js"></script>
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <script src="c3.min.js"></script>
@@ -34,6 +59,11 @@
   </head>
 
   <body>
+    <a href="index.html"><i class="fa fa-podcast fa-3x" aria-hidden="true" id="logo"></i></a>
+        <ul>
+      <li><a href="about.html">About</a></li>
+      <li><a href="team.html">Team</a></li>
+    </ul>
     <section class="content-section text-center" style="padding-bottom: 0">
     <div class="container">
       <div class="row wow fadeInDown" data-wow-duraction="1000ms" data-wow-delay="300ms">
@@ -49,8 +79,8 @@
                 bindto: '#chart4',
                 data: {
                     columns: [
-                        ['data1', 244, 350, 300, 80, 100, 124],
-                        ['data2', 130, 100, 140, 75, 150, 50]
+                        ['data1', 244, 325, 300, 80, 100, 124],
+                        ['data2', 130, 100, 80, 75, 150, 50]
                     ],
                     types: {
                         data1: 'area-spline',
@@ -99,7 +129,7 @@
                 bindto: '#chart5',
                 data: {
                     columns: [
-                        ['data1', 370, 335, 300, 200, 108, 250]
+                        ['data1', 120, 135, 100, 80, 108, 150]
                     ],
                     types: {
                         data1: 'area-spline',
@@ -112,11 +142,22 @@
             </script>
             <p style="font-family: Lato; font-size: 18px">Words Per Minute</p>
             </div>
+
+            <h2 style="font-family: Lato; font-size: 40px" id="score">Final Score: 80/100</h2>
+
+            <button class="btn btn-success" style="color:black">Download Audio</button>
+            <button class="btn btn-success" style="color:black">Download Transcript</button>
+
         </div>
             
       </div>
     </div>
   </section>
+
+  <script>
+    var numRand = Math.floor(Math.random() * 11 + 60);
+    document.getElementById('score').innerHTML = "Final Score: " + numRand;
+  </script>
 
 <!-- Firebase -->
     <script src="https://www.gstatic.com/firebasejs/4.9.0/firebase.js"></script>
