--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Speech Score</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="https://use.fontawesome.com/bbae49e875.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   </head>
