--- a/summary.html
+++ b/summary.html
@@ -1,180 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
   <head>
-
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
     <title>Speech Score</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/animate.css">
-
-    <!-- Custom fonts for this template -->
-    <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-    <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Cabin:700' rel='stylesheet' type='text/css'>
-
-    <!-- Custom styles for this template -->
-    <link href="css/grayscale.css" rel="stylesheet">
-
-    <link rel="shortcut icon" type="image/png" href="./img/potion.png"/>
-
-    <link rel="stylesheet" href="c3.css">
-    <style>
-      ul {
-  list-style-type: none;
-  margin: 0;
-  text-align: right;
-  margin-right: 30px;
-  font-family: 'Lato', sans-serif;
-  font-size: 1.2em;
-}
-li {
-    display: inline-block;
-    margin-top: 30px;
-}
-li a {
-  text-decoration: none;
-  color: white;
-  padding: 20px 10px;
-}
-#logo {
-  position: absolute;
-  top: 30px;
-  left: 50px;
-  color: white;
-}
-    </style>
-    <script src="jquery-3.2.0.min.js"></script>
-    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-    <script src="c3.min.js"></script>
+    <link rel="stylesheet" href="css/style.css">
     <script src="https://use.fontawesome.com/bbae49e875.js"></script>
-
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   </head>
-
   <body>
-    <a href="index.html"><i class="fa fa-podcast fa-3x" aria-hidden="true" id="logo"></i></a>
-        <ul>
+
+    <ul>
       <li><a href="about.html">About</a></li>
       <li><a href="team.html">Team</a></li>
     </ul>
-    <section class="content-section text-center" style="padding-bottom: 0">
-    <div class="container">
-      <div class="row wow fadeInDown" data-wow-duraction="1000ms" data-wow-delay="300ms">
-        <div class="col-lg-12 mx-auto">
-          <h2 style="font-family: Lato; font-size: 60px">Summary Statistics</h2>
 
-          <p class="intro-text" style="font-size: 22px; font-family: Lato">View your personalized results here!</p>
 
-          <div class="col-lg-4">
-            <div class="inverted" id="chart4"></div>
-            <script>
-            var chart = c3.generate({
-                bindto: '#chart4',
-                data: {
-                    columns: [
-                        ['data1', 244, 325, 300, 80, 100, 124],
-                        ['data2', 130, 100, 80, 75, 150, 50]
-                    ],
-                    types: {
-                        data1: 'area-spline',
-                        data2: 'area-spline'
-                    },
-                     colors: {
-                       data1: 'lightgreen',
-                       data2: 'lightpink'
-                     }
-                }
-            });
-            </script>
-            <p style="font-family: Lato; font-size: 18px">Sentiment Analysis</p>
-
-          </div>
-
-          <div class="col-lg-4">
-            <div id="chart3"></div>
-            <script>
-            var chart = c3.generate({
-                bindto: '#chart3',
-                data: {
-                    columns: [
-                        ['data1', 3],
-                        ['data2', 8],
-                        ['data3', 2],
-                        ['data4', 4]
-                    ],
-                    type: 'bar'
-                  },
-                  bar: {
-                    width: {
-                      ratio: 0.5
-                    }
-                  }
-                });
-            </script>
-            <p style="font-family: Lato; font-size: 18px">Number of Notifications</p>
-
-          </div>
-
-          <div class="col-lg-4">
-            <div id="chart5"></div>
-            <script>
-            var chart = c3.generate({
-                bindto: '#chart5',
-                data: {
-                    columns: [
-                        ['data1', 120, 135, 100, 80, 108, 150]
-                    ],
-                    types: {
-                        data1: 'area-spline',
-                    },
-                     colors: {
-                       data1: 'lightblue',
-                     }
-                }
-            });
-            </script>
-            <p style="font-family: Lato; font-size: 18px">Words Per Minute</p>
-            </div>
-
-            <h2 style="font-family: Lato; font-size: 40px" id="score">Final Score: 80/100</h2>
-
-            <button class="btn btn-success" style="color:black">Download Audio</button>
-            <button class="btn btn-success" style="color:black">Download Transcript</button>
-
-        </div>
-            
-      </div>
-    </div>
-  </section>
-
-  <script>
-    var numRand = Math.floor(Math.random() * 11 + 60);
-    document.getElementById('score').innerHTML = "Final Score: " + numRand;
-  </script>
-
-<!-- Firebase -->
-    <script src="https://www.gstatic.com/firebasejs/4.9.0/firebase.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/4.9.0/firebase-storage.js"></script>
-    <script src="js/init_firebase.js"></script>
-
-    <!-- Camera recording and screen mirroring -->
-    <script src="js/script.js"></script>
-
-    <!-- fusion charts -->
-    <script src="https://static.fusioncharts.com/code/latest/fusioncharts.js"></script>
-    <!-- <script src="js/fusioncharts.js"></script> -->
-    <script src="js/fusioncharts.charts.js"></script>
-    <script src="js/words_per_min.js"></script>
-
-    <script src="js/sentiment.js"></script>
-  
-
+    <a href="index.html"><i class="fa fa-podcast fa-3x" aria-hidden="true" id="logo"></i></a>
   </body>
 </html>
