Changed all functions to old JS style for consistency and to make it less confusing. Restructured JS and added comments to make it more readable. Deleted all unused elements and changed video to audio. Removed setInterval() and setTimeout() with getUserMedia() to prevent continuous user prompts, and since it doesn't work too well at the moment. Updated HTML/CSS to make it more responsive. It should work now for recording 5s mp3 clips without a server.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="https://use.fontawesome.com/bbae49e875.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link rel="icon" type="image/png" href="favicon.ico">
   </head>
   <body>
 
@@ -16,31 +18,21 @@
 
     <div class="left">
       <h1>Speech Score</h1>
-      <p>Improve your speaking skills.</p>
-      <video id="preview" autoplay muted width=500 height=500>
-      </video>
+      <h2>Improve your speaking skills.</h2>
     </div>
 
-    <h2>
-      <i class="fa fa-play-circle-o fa-5x" aria-hidden="true" id="startButton"></i>
-      <a href="./summary.html">
-      <i class="fa fa-stop-circle-o fa-5x" aria-hidden="true" id="stopButton"></i>
-      </a>
-    </h2>
+    <div id="buttons">
+      <i class="fa fa-play-circle-o" id="recordButton"></i>
+      <i class="fa fa-stop-circle-o" id="stopButton"></i>
+    </div>
 
-    <h3 style="position: absolute; font-size: 30px; bottom: 50px; left: 50px; font-family: Lato; color: white" id="score">Score</h3>
-
-
-    <a href="index.html"><i class="fa fa-podcast fa-3x" aria-hidden="true" id="logo"></i></a>
+    <div id="downloadbox">
+      <a id="downloadButton">Download</a>
+    </div>
+    <a href="index.html"><i class="fa fa-podcast fa-3x" id="logo"></i></a>
 
 
-        <!-- Camera recording and screen mirroring -->
-    <video id="recording"></video>
-    <a id="downloadButton" class="button">Download</a>
-    <a id="audioDownloadButton" class="button">Download</a>
-
-
-    <!-- Camera recording and screen mirroring -->
+    <audio id="recording"></audio>
     <script src="js/script.js"></script>
   </body>
 </html>
