--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://use.fontawesome.com/bbae49e875.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
     <link rel="icon" type="image/png" href="favicon.ico">
   </head>
   <body>
